--- a/customerManagementService/src/main/resources/application.yml
+++ b/customerManagementService/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/customerService
     username: root
-    password: Shrikant@9096
+    password: root@123
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -26,3 +26,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone : http://localhost:8761/eureka
+
+logging:
+  level:
+    root: WARN
