--- a/customerManagementService/src/main/resources/application.yml
+++ b/customerManagementService/src/main/resources/application.yml
@@ -17,7 +17,6 @@ spring:
   config:
     import: optional:configserver:http://localhost:8085
 
-
 eureka:
   instance:
     prefer-ip-address: true
@@ -30,3 +29,7 @@ eureka:
 logging:
   level:
     root: WARN
+
+com:
+  security:
+    isSecurityEnabled: true
