--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -24,6 +24,11 @@ spring:
           uri: lb://ACCOUNT-SERVICE
           predicates:
             - Path=/account/**
+        - id: TransactionService
+          uri: lb://TransactionService
+          predicates:
+            - Path=/transaction/**    
+            
           
   config:
     import: optional:configserver:http://localhost:8085
@@ -36,3 +41,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+
+  main:
+    web-application-type: reactive
